# robo-replan

./: .dockerignore  .gitignore  AGENTS.md  CODEX_WORKPAD.md  CONTEXT.md  DEPLOY_NORTHFLANK.md  Dockerfile  Dockerfile.train  PITCH.md  README.md  TRAIN_ON_NORTHFLANK.md  VIDEO_SCRIPT.md  WIN_STRATEGY.md  pyproject.toml  viz_standalone.html
docs/: ARCHITECTURE_CONTRACTS.md  EVIDENCE_ARTIFACTS.md
logs/: env_quality_report.json  episodes.jsonl  eval_protocol_3seed.json  hard20_benchmark.json
scripts/: build_and_run_training.sh  check.sh  check_arch_contracts.py  check_invariants.py  deploy_hf.py  deploy_northflank.sh  env_quality_report.py  eval_before_after.py  eval_protocol.py  hard20_benchmark.py  northflank_abort_running_runs.sh  northflank_create_train_job.json  northflank_train_status.sh  plot_curriculum.py  plot_training_curve.py  push_grpo_to_hub.py  run_northflank_training.sh  run_overnight_training.sh  scripted_policy.py  setup_northflank_jupyter.sh  smoke_env.py  validate_evidence_artifacts.py
server/: __init__.py  app.py  config.py  curriculum.py  environment.py  logger.py  models.py  openenv_env.py  viz.html
server/robosim/: __init__.py  controller.py  perception.py  randomizer.py  realism.py  sim_wrapper.py  vision.py
tests/: test_plot_curriculum.py
train/: README.md  colab_train.ipynb  grpo_train.py  run_h100_1.5b.sh  run_training.py  trl_train.py  unsloth_train.py
